--- a/app.json
+++ b/app.json
@@ -1,21 +1,19 @@
 {
   "expo": {
-    "name": "food-mesh",
-    "slug": "food-mesh",
+    "name": "RNAmplifyAuth",
+    "slug": "RNAmplifyAuth",
     "privacy": "public",
     "sdkVersion": "33.0.0",
     "platforms": [
       "ios",
-      "android",
-      "web"
+      "android"
     ],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/icon.png",
     "splash": {
-      "image": "./assets/images/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "image": "./assets/splash.png",
+      "resizeMode": "cover"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
