--- a/package.json
+++ b/package.json
@@ -4,35 +4,24 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject",
-    "test": "jest --watchAll"
-  },
-  "jest": {
-    "preset": "jest-expo"
+    "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/samples": "~3.0.0",
-    "@expo/vector-icons": "^10.0.1",
-    "@react-navigation/web": "^1.0.0-alpha.9",
-    "aws-amplify": "^1.1.29",
-    "aws-amplify-react-native": "^2.1.13",
+    "aws-amplify": "^1.1.17",
+    "aws-amplify-react-native": "^2.1.5",
     "expo": "^33.0.0",
-    "expo-asset": "^5.0.0",
-    "expo-constants": "^5.0.0",
-    "expo-font": "^5.0.0",
-    "expo-web-browser": "^5.0.0",
-    "native-base": "^2.12.1",
-    "react": "16.8.3",
-    "react-dom": "^16.8.6",
+    "mime-types": "^2.1.24",
+    "native-base": "^2.8.1",
+    "react": "^16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
-    "react-native-paper": "^2.16.0",
-    "react-native-web": "^0.11.4",
-    "react-navigation": "^3.11.0"
+    "react-native-maps": "^0.24.2",
+    "react-native-progress-steps": "^1.2.7",
+    "react-native-step-indicator": "0.0.11",
+    "react-navigation": "2.8.0",
+    "rn-viewpager": "^1.2.9"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.1.0",
-    "jest-expo": "^33.0.0"
+    "babel-preset-expo": "^5.0.0"
   },
   "private": true
 }
