Add mobx and react

--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "aws-amplify-react-native": "^2.1.5",
     "expo": "^33.0.0",
     "mime-types": "^2.1.24",
+    "mobx": "^5.10.1",
+    "mobx-react": "^6.1.1",
     "native-base": "^2.8.1",
     "react": "^16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
+    "react-native-elements": "^1.1.0",
     "react-native-maps": "^0.24.2",
     "react-native-progress-steps": "^1.2.7",
     "react-native-step-indicator": "0.0.11",
